testsuite/bsc.options/OptionsAttrBad1.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling OptionsAttrBad1.bsv
Error: "OptionsAttrBad1.bsv", line 2, column 8: (S0008)
  Unrecognized flag: aggressive-conditions
