testsuite/bsc.options/OptionsAttrBad1.bsv
(* synthesize, options="aggressive-conditions" *)
module sysOptionsAttrBad1 ();
endmodule

